# giphy_proxy

./: Cargo.toml  README.md
giphy_client/: Cargo.toml
giphy_client/src/: main.rs
giphy_client/src/lib/: args.rs  mod.rs
giphy_proxy/: Cargo.toml
giphy_proxy/src/: lib.rs  main.rs
http/: Cargo.toml
http/src/: client.rs  common.rs  error.rs  lib.rs  request.rs  response.rs  server.rs
