[package]
name = "giphy_proxy"
version = "0.1.0"
authors = ["Rick Weber <rick.weber.iii@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = ""
futures = { version = "0.3.13", features = ["thread-pool"] }
url = "2.2.1"
regex = "1.5.2"
async-std = { version = "1.9.0", features = ["unstable"] }
log = "0.4.14"
http = { path = "../http" }
tokio = { version = "1.5.0", features = ["macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.3"
